# anywork

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh.md  docker-compose.yml
deploy/gcloud/: README.md
deploy/k8s/: kustomization.yaml  namespace.yaml  rbac.yaml  server-deployment.yaml  worker-pod-template.yaml
docs/: architecture.md
docs/plans/: 2026-02-25-nanobot-integration-design.md  2026-02-25-nanobot-integration.md  architecture-v2.md
scripts/: dev.sh  e2e-admin-trace.mjs  e2e-k8s.ts  e2e-test.mjs  k8s-local.sh
server/: Dockerfile  TEST_REPORT.md  e2e-k8s.ts  package-lock.json  package.json  vitest.config.ts
server/src/: config.ts  index.ts
server/src/__tests__/: setup.ts
server/src/__tests__/channel/: webchat.test.ts  (+2 more)
server/src/channel/: index.ts  registry.ts  types.ts  webchat.ts  webhook.ts
server/src/db/: schema.ts  tasks.ts
server/src/lib/: titleGen.ts
server/src/routes/: admin.ts  channel.ts  sessions.ts  tasks.ts  workspace.ts
server/src/scheduler/: container.ts
server/src/task/: dispatcher.ts
server/src/ws/: handler.ts
test-reports/: ACCEPTANCE-GUIDE.md
web/: Dockerfile  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: adminApi.ts  adminTypes.ts  api.ts  types.ts
web/src/stores/: adminStore.ts  chatStore.ts
worker/: Dockerfile  README.md  pyproject.toml
worker/anywork_adapter/: __init__.py  engine_claude.py  executor.py  http_app.py  http_channel.py  main.py  skill_loader.py  workspace_init.py
(+22 files in other folders)
